--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +23,7 @@
     "lucide-react": "^0.464.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
