--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "directory-tree": "^3.5.2",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "on-headers": "^1.0.2",
